// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SupplementalApplicationPage it should render correctly with status history 1`] = `
Array [
  <header
    className="lead-header short has-breadcrumbs bg-snow"
  >
    <div
      className="row full-width inner--3x"
    >
      <div
        className="large-12 columns"
      >
        <nav
          aria-label="breadcrumb"
        >
          <ol
            className="breadcrumbs"
          >
            <li>
              <a
                href="/lease_ups"
              >
                Lease Ups
              </a>
            </li>
            <li>
              <a
                href="/listings/listing1/lease_ups"
              >
                Cameo Apartments
              </a>
            </li>
            <li
              className="current"
            >
              <a
                aria-current="page"
                href="#"
              >
                name
              </a>
            </li>
          </ol>
        </nav>
        <hgroup
          className="lead-header_group"
        >
          <h1
            className="lead-header_title small c-oil"
          >
            name: applicant name
          </h1>
          <div
            className="medium-8 columns no-padding"
          >
            <p />
          </div>
          <div
            className="medium-4 columns no-padding"
          />
        </hgroup>
      </div>
    </div>
  </header>,
  <div
    className="tabs-section tabs-row row full-width inner--3x bg-snow"
  >
    <ul
      className="tabs full-width-small-only"
      role="menubar"
    >
      <li
        className="tab-title"
        role="none"
      >
        <a
          aria-selected={false}
          href="/applications/xxx1"
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          Short Form Application
        </a>
      </li>
      <li
        className="tab-title"
        role="none"
      >
        <a
          aria-selected={false}
          href="/applications/xxx1/supplementals"
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          Supplemental Information
        </a>
      </li>
    </ul>
  </div>,
  <section
    className="tabs-card-row row full-width inner--3x margin-bottom--2x"
  >
    <div
      className="app-inner inset-wide padding-bottom-none margin-top"
    >
      <h2
        className="sr-only"
      >
        Status Update
      </h2>
      <div
        className="status-update expand-wide is-processing"
      >
        <h3
          className="status-update_title"
        >
          Update Status
        </h3>
        <div
          className="status-update_action"
        >
          <button
            aria-expanded="false"
            className="button dropdown-button has-icon--right text-align-left small is-processing"
            href="#"
          >
            <span
              aria-hidden="true"
              className="ui-icon ui-small"
            >
              <svg>
                <use
                  xlinkHref="#i-arrow-down"
                />
              </svg>
            </span>
            Processing
          </button>
        </div>
        <div
          className="status-update_message"
        >
          <div
            className="status-update_comment"
          >
            <p
              className="status-update_note"
            >
              Some comment
            </p>
            <span
              className="status-update_date"
            >
              03/12/18 
            </span>
          </div>
          <div
            className="status-update_footer"
          >
            <button
              className="button tiny tertiary"
              data-event=""
              type="button"
            >
              Add a comment
            </button>
            <a
              className="t-small right"
              href="/see_status_history"
            >
              See Status History
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="app-inner header-wide"
    >
      <h2
        className="app-card_h2"
      >
        Current Contact Information
      </h2>
    </div>
    <div
      className="app-inner header-wide"
    >
      <h2
        className="app-card_h2"
      >
        Lease Information
      </h2>
    </div>
    <div
      className="app-inner subheader-wide"
    >
      <h3
        className="app-card_h3 t-sans"
      >
        Status History
      </h3>
    </div>
    <div
      className="app-inner inset-wide border-bottom"
    >
      <div
        className="status-list"
      >
        <ul>
          <li
            className="status-list_item"
          >
            <div
              className="status-list_tag is-approved"
            >
              Approved
            </div>
            <div
              className="status-list_comment"
            >
              <p
                className="status-list_note"
              >
                xxxx1
              </p>
              <span
                className="status-list_date"
              >
                <div>
                  10/05/18
                </div>
              </span>
            </div>
          </li>
          <li
            className="status-list_item"
          >
            <div
              className="status-list_tag is-pending"
            >
              Pending
            </div>
            <div
              className="status-list_comment"
            >
              <p
                className="status-list_note"
              >
                xxxx2
              </p>
              <span
                className="status-list_date"
              >
                <div>
                  10/05/18
                </div>
              </span>
            </div>
          </li>
        </ul>
        <div
          className="status-list_footer"
        >
          <button
            className="button tertiary tiny margin-bottom-none"
            data-event=""
            onClick={[Function]}
            type="button"
          >
            Add a comment
          </button>
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`SupplementalApplicationPage it should render correctly without status history 1`] = `
Array [
  <header
    className="lead-header short has-breadcrumbs bg-snow"
  >
    <div
      className="row full-width inner--3x"
    >
      <div
        className="large-12 columns"
      >
        <nav
          aria-label="breadcrumb"
        >
          <ol
            className="breadcrumbs"
          >
            <li>
              <a
                href="/lease_ups"
              >
                Lease Ups
              </a>
            </li>
            <li>
              <a
                href="/listings/listing1/lease_ups"
              >
                Cameo Apartments
              </a>
            </li>
            <li
              className="current"
            >
              <a
                aria-current="page"
                href="#"
              >
                name
              </a>
            </li>
          </ol>
        </nav>
        <hgroup
          className="lead-header_group"
        >
          <h1
            className="lead-header_title small c-oil"
          >
            name: applicant name
          </h1>
          <div
            className="medium-8 columns no-padding"
          >
            <p />
          </div>
          <div
            className="medium-4 columns no-padding"
          />
        </hgroup>
      </div>
    </div>
  </header>,
  <div
    className="tabs-section tabs-row row full-width inner--3x bg-snow"
  >
    <ul
      className="tabs full-width-small-only"
      role="menubar"
    >
      <li
        className="tab-title"
        role="none"
      >
        <a
          aria-selected={false}
          href="/applications/xxx1"
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          Short Form Application
        </a>
      </li>
      <li
        className="tab-title"
        role="none"
      >
        <a
          aria-selected={false}
          href="/applications/xxx1/supplementals"
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          Supplemental Information
        </a>
      </li>
    </ul>
  </div>,
  <section
    className="tabs-card-row row full-width inner--3x margin-bottom--2x"
  >
    <div
      className="app-inner inset-wide padding-bottom-none margin-top"
    >
      <h2
        className="sr-only"
      >
        Status Update
      </h2>
      <div
        className="status-update expand-wide is-processing"
      >
        <h3
          className="status-update_title"
        >
          Update Status
        </h3>
        <div
          className="status-update_action"
        >
          <button
            aria-expanded="false"
            className="button dropdown-button has-icon--right text-align-left small is-processing"
            href="#"
          >
            <span
              aria-hidden="true"
              className="ui-icon ui-small"
            >
              <svg>
                <use
                  xlinkHref="#i-arrow-down"
                />
              </svg>
            </span>
            Processing
          </button>
        </div>
        <div
          className="status-update_message"
        >
          <div
            className="status-update_comment"
          >
            <p
              className="status-update_note"
            >
              Some comment
            </p>
            <span
              className="status-update_date"
            >
              03/12/18 
            </span>
          </div>
          <div
            className="status-update_footer"
          >
            <button
              className="button tiny tertiary"
              data-event=""
              type="button"
            >
              Add a comment
            </button>
            <a
              className="t-small right"
              href="/see_status_history"
            >
              See Status History
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="app-inner header-wide"
    >
      <h2
        className="app-card_h2"
      >
        Current Contact Information
      </h2>
    </div>
  </section>,
]
`;
